Added pagination and some refactoring

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div class="page-header__logo"></div>
           <nav class="page-header__navigation">
             <a id="navigation__habr" href="habr">Habrahabr</a>
+            <a id="navigation__sm" href="sm">Smash</a>
           </nav>
         </header>
       </div>
@@ -56,14 +57,14 @@
           </div>
 
           <div class="widget widget-tags">
-            <div class="widget-tags__title">Tags</div>
+            <div class="widget-tags__title">Page</div>
             <div class="widget-tags__tags">
-              <a href="" class="tag">Gallery</a>
-              <a href="" class="tag">Links</a>
-              <a href="" class="tag">Quote</a>
-              <a href="" class="tag">Sidebars</a>
-              <a href="" class="tag">Status</a>
-              <a href="" class="tag">Videos</a>
+              <!--<a href="" class="tag">Gallery</a>-->
+              <!--<a href="" class="tag">Links</a>-->
+              <!--<a href="" class="tag">Quote</a>-->
+              <!--<a href="" class="tag">Sidebars</a>-->
+              <!--<a href="" class="tag">Status</a>-->
+              <!--<a href="" class="tag">Videos</a>-->
             </div>
           </div>
         </aside>
